# job-applicator-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  RELEASING.md  ROADMAP.md  config.example.toml  main.py  pyproject.toml  pyrightconfig.json
.agents/skills/green-gate/: SKILL.md
.agents/skills/qa-sanity/: SKILL.md  qa.py
.agents/skills/run-job-applicator/: SKILL.md
.claude/skills/green-gate/: SKILL.md
.claude/skills/green-gate/scripts/: gate.sh
.claude/skills/qa-sanity/: SKILL.md  qa.py
.claude/skills/run-job-applicator/: SKILL.md  driver.sh
.github/workflows/: release.yml
.mimocode/command/: doc-sync.md  dream.md  ship.md  verify.md
.mimocode/plans/: 1781323977284-lucky-garden.md
docs/: document-quality-eval.md  grounding-verifier.spec.md  llm-sampler-eval.md
docs/compose/plans/: 2026-06-13-batch-mode.md  2026-06-13-cover-letter-integration.md  2026-06-13-enhanced-tailor-workflow.md  2026-06-13-ocr-fallback.md  2026-06-13-resume-tailor.md  2026-06-14-ats-integration.md  2026-06-14-verbose-flag.md  2026-06-15-cookie-auth.md
docs/compose/reports/: 2026-06-15-indeed-cloudflare-research.md  2026-06-15-production-readiness-assessment.md  2026-06-19-hardening-baseline.md  2026-06-19-hardening-round2-baseline.md  2026-06-21-hardening-arc-code-review.md  2026-06-22-manual-qa-pass-2.md  tier1-tier2-gap-fixes-and-batch-mode.md
docs/compose/specs/: 2026-06-13-cover-letter-integration-design.md  2026-06-13-enhanced-tailor-workflow-design.md  2026-06-13-ocr-fallback-design.md  2026-06-14-ats-integration-design.md  2026-06-14-verbose-flag-design.md  2026-06-26-semantic-skill-grounding.md
docs/style-guide-examples/: 01_enterprise-formal.txt  02_startup-warm.txt  03_technical-minimal.txt  04_narrative-storyteller.txt  05_modern-impact.txt  README.md
docs/superpowers/plans/: 2026-06-25-llm-skill-extraction-cli-validation.md  2026-06-25-llm-skill-extraction.md  2026-06-25-pdf-rendering-implementation-plan.md
docs/superpowers/specs/: 2026-06-25-llm-skill-extraction-design.md  2026-06-25-pdf-rendering-design.md
logs/: live_test_report.md
scripts/: check_matcher_gate_required.py  detailed_match_report.py  eval_document_quality.py  eval_extraction_precision.py  eval_llm_sampler.py  eval_matching.py  green_gate.sh  ocr_meta_test.py  release.sh  serve-vllm.sh  show_style_analysis.py  smoke_test_match.py  tailor_cgi.py  test_e2e.py  test_llm.py  test_real_job.py  test_style_guide.py
src/job_applicator/: __init__.py  __main__.py  batch_state.py  cli.py  config.py  diagnostics.py  exceptions.py  factories.py  jobs_store.py  models.py  search_state.py  selector_health.py  selector_registry.py  state.py
src/job_applicator/applicators/: base.py  indeed.py  linkedin.py
src/job_applicator/browser/: actions.py  manager.py
src/job_applicator/documents/: artifacts.py  ats_checker.py  cover_letter.py  formatted_models.py  grounding_verifier.py  job_category.py  ocr.py  ocr_meta_test.py  pdf_renderer.py  quality_eval.py  resume.py  resume_document.py  resume_overlay.py  resume_tailor.py  sign_off.py  source_facts.py  source_integrity.py  source_realization.py  style_analyzer.py  tone_detector.py
src/job_applicator/embeddings/: cache.py  matching.py  service.py  skill_extraction.py  target_criteria.py
src/job_applicator/scrapers/: base.py  indeed.py  linkedin.py  text_repair.py
src/job_applicator/skills/: __init__.py  normalization.py
src/job_applicator/templates/cover_letter/: classic.typ  minimal.typ  modern.typ
src/job_applicator/templates/cv/: classic.typ  minimal.typ  modern.typ
src/job_applicator/tui/: __init__.py  actions.py  app.py  screens.py  textfmt.py
src/job_applicator/utils/: console.py  cookies.py  diff.py  language.py  llm.py  logging.py  path.py  profile.py  region.py  retry.py  secure_store.py  text.py  url.py  verbose.py
src/job_applicator/workflows/: __init__.py  apply.py  cover_letter.py  tailor.py  tailor_auto.py  tailor_policy.py
stubs/browser_cookie3/: __init__.pyi
stubs/fitz/: __init__.pyi
stubs/instructor/: __init__.pyi
stubs/litellm/: __init__.pyi  exceptions.pyi
stubs/paddleocr/: __init__.pyi
stubs/playwright_stealth/: __init__.pyi
stubs/pyvirtualdisplay/: __init__.pyi
tests/: conftest.py  helpers.py  test_apply_dry_run_cover_letter_live.py  test_batch_live.py  test_grounding_gold_live.py  test_live_tailor.py  test_sign_off_e2e_live.py  test_style_guide_e2e_live.py  test_tier1_live.py  test_tier2_live.py
tests/data/: grounding_gold.json
tests/integration/: test_apply_state_integration.py  test_batch_resume_integration.py  test_browser_fingerprint.py  test_browser_wiring.py  test_pdf_regression.py  test_pdf_rendering.py  test_skill_extraction.py
tests/unit/: conftest.py  test_applicator_safety.py  test_apply_workflow.py  test_artifacts.py  test_ats_checker.py  test_batch.py  test_batch_state.py  test_browser_actions.py  test_browser_context.py  test_cli_cookies.py  test_cli_factory.py  test_cli_pdf_flags.py  test_cli_volume_caps.py  test_config.py  test_conftest.py  test_cookies.py  test_diagnostics.py  test_diff.py  test_documents.py  test_embeddings.py  test_exceptions.py  test_factories.py  test_file_hygiene.py  test_formatted_models.py  test_funnel_cli.py  test_gate_scripts.py  test_grounding_verifier.py  test_hallucination_guards.py  test_import_cookies_cli.py  test_indeed.py  test_indeed_applicator.py  test_job_category.py  test_jobs_file.py  test_jobs_store.py  test_language.py  test_llm_sampler_eval.py  test_llm_utils.py  test_matching_target_roles.py  test_models.py  test_pdf_renderer.py  (+36 more)
