[project]
name = "job-applicator"
version = "0.2.0"
description = "AI-powered job application tool with browser automation"
authors = [{name = "Drei"}]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

dependencies = [
    # Core
    "playwright>=1.53",
    "playwright-stealth>=2.0",  # Stealth() class + apply_stealth_async — 2.x API used in browser/manager.py
    "pydantic>=2.12",
    "pydantic-settings>=2.10",
    "typer>=0.16",
    "rich>=14.2",
    "jinja2>=3.1",
    "numpy>=1.26",
    # LLM - Modern stack
    "litellm>=1.88",           # Universal LLM API (OpenAI, Anthropic, vLLM, 100+ providers)
    "instructor>=1.15",        # Structured outputs from LLMs
    # Document processing
    "python-docx>=1.1",
    "paddleocr>=2.10,<3.0",
    "paddlepaddle>=2.6,<3.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
serve = [
    # OPTIONAL: self-host the OpenAI-compatible LLM endpoint locally (scripts/serve-vllm.sh).
    # Normally job-applicator is just a CLIENT of an existing endpoint (see [llm] api_base);
    # install this only for a standalone box with no shared/remote LLM. Large; needs a CUDA GPU.
    "vllm>=0.21,<0.22",
]
pdf = [
    "pymupdf>=1.24",
]
browser = [
    # Reads/decrypts a local browser's cookie store for `import-cookies --from-browser`.
    "browser-cookie3>=0.19",
]
indeed = [
    # Indeed's Cloudflare managed challenge blocks headless Chrome, so the scraper
    # runs headed; pyvirtualdisplay keeps that windowless + server-capable (needs the
    # system Xvfb binary, e.g. `apt install xvfb`). Without it, Indeed falls back to
    # the ambient $DISPLAY or asks you to run under `xvfb-run`.
    "pyvirtualdisplay>=3.0",
]
dev = [
    "ruff>=0.12",
    "mypy>=1.16",
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.2",
    "hypothesis>=6.142",
]

[project.scripts]
job-applicator = "job_applicator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_applicator"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "UP",    # pyupgrade
    "ASYNC", # async correctness
    "S",     # bandit (security)
    "RUF",   # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S108", "S607", "ASYNC221"]
"scripts/**/*.py" = ["S101", "S603"]
# SQL query fragments in this file are assembled from hardcoded literals and "?"
# placeholders derived from the ApplicationStatus enum; no user input reaches SQL.
"src/job_applicator/state.py" = ["S608"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Local stubs for otherwise-untyped third-party deps (e.g. pyvirtualdisplay).
mypy_path = "stubs"

# Third-party packages that ship no type stubs or py.typed marker. They are
# installed but un-annotated, so strict mypy can't analyze them; ignore the
# missing imports for these specific modules rather than weakening strict mode
# globally. Revisit if any of them start shipping types.
[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
    "fitz.*",
    "playwright_stealth.*",
    "browser_cookie3.*",
    # Optional transitive dep (via the embeddings stack); imported lazily in
    # diagnostics.py and may be absent in a minimal/type-check environment.
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise browser automation",
    "live: end-to-end tests needing live infra (vLLM at localhost:8000 + GPU); excluded from the fast gate",
]
